@@ -20,13 +20,10 @@
 
         <!-- These properties are needed in order for them to be resolvable by the generated projects -->
         <compiler-plugin.version>${version.compiler.plugin}</compiler-plugin.version>
-        <kotlin.version>2.4.0</kotlin.version>
+        <kotlin.version>2.4.10</kotlin.version>
         <ksp-gradle-plugin.version>2.2.10-2.0.2</ksp-gradle-plugin.version> <!-- Kotlin Symbol Processing plugin used in a test -->
         <dokka.version>2.2.0</dokka.version>
-        <scala.version>2.13.12</scala.version>
-        <scala-maven-plugin.version>4.9.9</scala-maven-plugin.version>
-        <!-- not pretty but this is used in the codestarts and we don't want to break compatibility -->
-        <scala-plugin.version>${scala-maven-plugin.version}</scala-plugin.version>
+
         <jboss-bridger-plugin.version>1.6.Final</jboss-bridger-plugin.version>
 
         <!-- Jandex versions -->
@@ -34,15 +31,15 @@
         <jandex-gradle-plugin.version>2.3.0</jandex-gradle-plugin.version>
 
         <asciidoctorj.version>3.0.0</asciidoctorj.version>
-        <htmlunit.version>5.1.0</htmlunit.version>
+        <htmlunit.version>5.4.0</htmlunit.version>
         <javaparser-core.version>3.28.2</javaparser-core.version>
         <jdeparser.version>2.1.0</jdeparser.version>
         <subethasmtp.version>6.0.1</subethasmtp.version>
 
         <!-- Dev tools -->
         <freemarker.version>2.3.34</freemarker.version>
-        <commonmark.version>0.28.0</commonmark.version>
-        <jgit.version>7.7.0.202606012155-r</jgit.version>
+        <commonmark.version>0.30.0</commonmark.version>
+        <jgit.version>7.7.1.202607240634-r</jgit.version>
 
         <!-- Arquillian BOM -->
         <arquillian.version>1.7.0.Final</arquillian.version>
@@ -63,7 +60,10 @@
         <!-- These 2 properties are used by CreateProjectMojo to add the Maven Wrapper -->
         <proposed-maven-version>3.9.16</proposed-maven-version>
         <maven-wrapper.version>3.3.4</maven-wrapper.version>
-        <gradle-wrapper.version>9.5.1</gradle-wrapper.version>
+        <!-- Supported Gradle versions, interpreted as a version range -->
+        <minimum-gradle-version>9.6</minimum-gradle-version>
+        <supported-gradle-versions>[9.6,)</supported-gradle-versions>
+        <gradle-wrapper.version>9.7.0</gradle-wrapper.version>
         <quarkus-gradle-plugin.version>${project.version}</quarkus-gradle-plugin.version>
         <quarkus-maven-plugin.version>${project.version}</quarkus-maven-plugin.version>
         <maven-plugin-plugin.version>3.8.1</maven-plugin-plugin.version>
@@ -84,26 +84,57 @@
         <opensearch.protocol>http</opensearch.protocol>
         <junit-pioneer.version>2.3.0</junit-pioneer.version>
 
-        <!-- Database images for JDBC/Reactive/Hibernate tests and devservices -->
-        <postgres.image>docker.io/library/postgres:18</postgres.image>
-        <postgis.image>docker.io/postgis/postgis:18-3.6</postgis.image>
-        <pgvector.image>docker.io/pgvector/pgvector:pg18</pgvector.image>
-        <mariadb.image>docker.io/library/mariadb:12.1</mariadb.image>
-        <db2.image>icr.io/db2_community/db2:12.1.0.0</db2.image>
-        <mssql.image>mcr.microsoft.com/mssql/server:2022-latest</mssql.image>
+        <!-- Database default versions for `quarkus.datasource.db-version` and images for devservices -->
+        <db2.version>12.1</db2.version>
+        <db2.image>icr.io/db2_community/db2:${db2.version}.5.0</db2.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/ibm-db2 -->
+        <db2.default.version>12.1</db2.default.version>
+        <mariadb.version>12.3</mariadb.version>
+        <mariadb.image>docker.io/library/mariadb:${mariadb.version}</mariadb.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/mariadb -->
+        <mariadb.default.version>11.4</mariadb.default.version>
+        <mssql.version>16</mssql.version> <!-- SQL Server 2022 = version 16 -->
+        <mssql.image>mcr.microsoft.com/mssql/server:2025-latest</mssql.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/mssqlserver -->
+        <mssql.default.version>16</mssql.default.version>
         <mssql.image.aarch64>mcr.microsoft.com/azure-sql-edge:latest</mssql.image.aarch64>
-        <mysql.image>docker.io/library/mysql:9.5</mysql.image>
-        <oracle.image>docker.io/gvenzl/oracle-free:23-slim-faststart</oracle.image>
-        <mongo.image>docker.io/library/mongo:7.0</mongo.image>
+        <mysql.version>9.7</mysql.version>
+        <mysql.image>docker.io/library/mysql:${mysql.version}</mysql.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/mysql -->
+        <mysql.default.version>8.4</mysql.default.version>
+        <oracle.version>23</oracle.version>
+        <oracle.image>docker.io/gvenzl/oracle-free:${oracle.version}-slim-faststart</oracle.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/oracle-database -->
+        <oracle.default.version>23</oracle.default.version>
+        <postgres.version>18</postgres.version>
+        <postgres.image>docker.io/library/postgres:${postgres.version}</postgres.image>
+        <postgis.image>docker.io/postgis/postgis:${postgres.version}-3.6</postgis.image>
+        <pgvector.image>docker.io/pgvector/pgvector:pg${postgres.version}</pgvector.image>
+        <!-- Default build-time version: latest version at least 2 years old -->
+        <!-- See https://github.com/quarkusio/quarkus/issues/53277 -->
+        <!-- See https://endoflife.date/postgresql -->
+        <postgres.default.version>16</postgres.default.version>
+
+        <mongo.image>docker.io/library/mongo:8.3</mongo.image>
 
         <!-- Align various dependencies that are not really part of the bom-->
         <junit4.version>4.13.2</junit4.version>
 
         <!-- The image to use for tests that run Keycloak -->
-        <keycloak.server.version>26.6.2</keycloak.server.version>
+        <keycloak.server.version>26.7.1</keycloak.server.version>
         <keycloak.docker.image>quay.io/keycloak/keycloak:${keycloak.server.version}</keycloak.docker.image>
 
-        <unboundid-ldap.version>7.0.4</unboundid-ldap.version>
+        <unboundid-ldap.version>7.0.5</unboundid-ldap.version>
 
         <assertj.version>3.27.7</assertj.version>
         <!-- Keep in sync with VineflowerDecompiler.DEFAULT_VINEFLOWER_VERSION -->
@@ -113,18 +144,24 @@
         <wiremock-maven-plugin.version>7.3.0</wiremock-maven-plugin.version>
 
         <!-- Artemis test dependencies -->
-        <artemis.version>2.54.0</artemis.version>
+        <artemis.version>2.55.0</artemis.version>
 
         <!-- Dev Services Images -->
         <!-- TODO switch to apache/activemq-artemis to match the artemis version-->
-        <amqp.image>quay.io/artemiscloud/activemq-artemis-broker:1.0.25</amqp.image>
+        <amqp.image>quay.io/arkmq-org/arkmq-org-broker:artemis.2.55.0</amqp.image>
         <apicurio-registry.image>quay.io/apicurio/apicurio-registry:3.1.7</apicurio-registry.image>
         <narayana-lra.image>quay.io/jbosstm/lra-coordinator:latest</narayana-lra.image>
         <rabbitmq.image>docker.io/library/rabbitmq:3.12-management</rabbitmq.image>
         <pulsar.image>docker.io/apachepulsar/pulsar:3.2.4</pulsar.image>
-        <redis.image>docker.io/library/redis:7</redis.image>
+        <redis.image>docker.io/library/redis:8</redis.image>
         <infinispan.image>quay.io/infinispan/server:latest</infinispan.image>
         <mailpit.image>docker.io/axllent/mailpit:latest</mailpit.image>
+        <kafka.redpanda.image>docker.io/redpandadata/redpanda:v26.1.12</kafka.redpanda.image>
+        <kafka.strimzi.image>quay.io/strimzi-test-container/test-container:0.115.0-kafka-4.2.0</kafka.strimzi.image>
+        <kafka.native.image>quay.io/ogunalp/kafka-native:latest</kafka.native.image>
+        <kafka.upstream.image>docker.io/apache/kafka:4.2.0</kafka.upstream.image>
+        <kafka.upstream.native.image>docker.io/apache/kafka-native:4.2.0</kafka.upstream.native.image>
+        <observability.lgtm.image>docker.io/grafana/otel-lgtm:0.24.0</observability.lgtm.image>
 
         <!-- Code Coverage Properties-->
         <jacoco.agent.argLine></jacoco.agent.argLine>
@@ -161,7 +198,7 @@
         <failsafe.argLine.additional>${surefire.argLine.additional}</failsafe.argLine.additional>
 
         <!-- google cloud functions invoker-->
-        <gcf-invoker.version>2.0.0</gcf-invoker.version>
+        <gcf-invoker.version>2.0.2</gcf-invoker.version>
         <!-- Jakarta JMS API -->
         <jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 
@@ -353,7 +390,7 @@
 
             <!-- Artemis test dependencies -->
             <dependency>
-                <groupId>org.apache.activemq</groupId>
+                <groupId>org.apache.artemis</groupId>
                 <artifactId>artemis-server</artifactId>
                 <version>${artemis.version}</version>
                 <scope>test</scope>
@@ -381,13 +418,13 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.apache.activemq</groupId>
+                <groupId>org.apache.artemis</groupId>
                 <artifactId>artemis-amqp-protocol</artifactId>
                 <version>${artemis.version}</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
-                        <groupId>org.apache.activemq</groupId>
+                        <groupId>org.apache.artemis</groupId>
                         <artifactId>artemis-server</artifactId>
                     </exclusion>
                 </exclusions>
@@ -470,7 +507,7 @@
                         <!-- the add-opens java.base/java.lang=ALL-UNNAMED is here for
                              org.jboss.JDKSpecific.ThreadAccess.clearThreadLocals() -->
                         <!-- set -XX:+HeapDumpOnOutOfMemoryError to provide some useful debugging info, should this happen -->
-                        <argLine>${jacoco.agent.argLine} -Xmx1500m -XX:+HeapDumpOnOutOfMemoryError -XX:MaxMetaspaceSize=1500m -Djava.io.tmpdir="${project.build.directory}" ${surefire.argLine.additional} --add-opens java.naming/com.sun.naming.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argLine>
+                        <argLine>${jacoco.agent.argLine} -Xmx1500m -XX:+HeapDumpOnOutOfMemoryError -XX:MaxMetaspaceSize=1500m -Djava.io.tmpdir="${project.build.directory}" ${surefire.argLine.additional} --enable-native-access=ALL-UNNAMED --add-opens java.naming/com.sun.naming.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argLine>
                         <excludedEnvironmentVariables>MAVEN_OPTS</excludedEnvironmentVariables>
                     </configuration>
                 </plugin>
@@ -535,6 +572,7 @@
                             <phase>${maven-enforcer-plugin.phase}</phase>
                             <configuration>
                                 <rules>
+                                    <banDuplicatePomDependencyVersions/>
                                     <dependencyConvergence/>
                                     <externalRules>
                                         <location>classpath:enforcer-rules/quarkus-banned-dependencies.xml</location>
@@ -623,7 +661,7 @@
                         <dependency>
                             <groupId>org.apache.groovy</groupId>
                             <artifactId>groovy</artifactId>
-                            <version>5.0.6</version>
+                            <version>5.0.8</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -851,12 +889,12 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <jdkVersion>17</jdkVersion>
+                            <jdkVersion>21</jdkVersion>
                             <outputFormat>html</outputFormat>
                             <externalDocumentationLinks>
                                 <link>
                                     <!-- Root URL of the generated documentation to link with. The trailing slash is required! -->
-                                    <url>https://docs.oracle.com/en/java/javase/17/docs/api/</url>
+                                    <url>https://docs.oracle.com/en/java/javase/21/docs/api/</url>
                                 </link>
                             </externalDocumentationLinks>
                         </configuration>
